Fix owner dashboard warnings and inventory category filter